Week1/makeGray/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/heeirunjayakumar/Desktop/JavaFile/makeGray
-d
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/private/var/folders/9q/sw8fzhf52nx697zdmj2fnb100000gn/T/AppTranslocation/1425DB1A-6677-4233-B74B-648EF13E6F4F/d/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java
<---- end of javadoc command ---->
Loading source file /Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java...
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java:14: error: ')' expected
        ImageResources outImage= new ImageResource(inImage.getWidth(). inImage.getheight();
                                                                                          ^
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java:17: error: ';' expected
            int average= (inPixel.getRed()+ inPixel.getBlue()+ inPixel.getGreen())/3
                                                                                    ^
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java:20: error: ';' expected
            pixel.setGreen(average):
                                   ^
/Users/heeirunjayakumar/Desktop/JavaFile/makeGray/GrayScaleConverter.java:25: error: reached end of file while parsing
}               
 ^
4 errors
